# aws-ml-training

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  buildspec.yml  pyproject.toml  requirements.txt
01-fraud-detection/: README.md
01-fraud-detection/exercises/: fraud_detection_exercise.ipynb
01-fraud-detection/solutions/: deploy_sagemaker.py  fraud_detection_solution.ipynb
02-customer-churn/: README.md
02-customer-churn/solutions/: customer_churn_solution.ipynb
03-text-classification/: README.md
03-text-classification/solutions/: text_classification_solution.ipynb
04-sentiment-analysis/: README.md
04-sentiment-analysis/solutions/: sentiment_analysis_solution.ipynb
05-mlops-packaging/: README.md
05-mlops-packaging/solutions/: feature_store_packaging_solution.ipynb
06-mlops-deployment/: README.md
06-mlops-deployment/solutions/: advanced_endpoints_solution.ipynb
07-mlops-pipelines/: README.md
07-mlops-pipelines/solutions/: mlops_pipelines_solution.ipynb
08-deployment-strategies/: README.md
08-deployment-strategies/solutions/: deployment_strategies_solution.ipynb
09-bedrock-genai/: README.md
09-bedrock-genai/solutions/: bedrock_comparison_solution.ipynb
10-ml-monitoring/: lab10_model_monitoring.ipynb
architecture/: best-practices.md
docker/: README.md
docker/sklearn-custom/: Dockerfile  inference.py  requirements.txt  serve
docs/: MLFLOW_DVC_GUIDE.md  instructor-guide.md  setup-guide.md  troubleshooting.md
mlops/deployment/: deployment_strategies.md
mlops/monitoring/: model_monitoring.py
mlops/pipelines/: sagemaker_pipeline.py
mlops/registry/: model_registry.py
scripts/: run_test_demo.py
src/ml_toolkit/: __init__.py  config.py  debugger.py  dvc_manager.py  lineage.py  mlflow_tracking.py
tests/: __init__.py  conftest.py  test_preprocessing.py
tests/integration/: test_sagemaker_integration.py
tests/unit/: test_evaluation.py  test_preprocessing.py
utils/: __init__.py  evaluation.py  preprocessing.py  sagemaker_config.py  sagemaker_helpers.py
