[tool.poetry]
name = "aws-ml-training"
version = "1.0.0"
description = "AWS ML Training Labs - From data science to MLOps deployment"
authors = ["Instructor"]
readme = "README.md"
packages = [{include = "ml_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.0"
sagemaker = "^2.180.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.5.0,<1.6.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
joblib = "^1.3.0"
imbalanced-learn = "^0.12.3"
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
scipy = "^1.11.0"
mlflow = "^2.9.0"
dvc = {extras = ["s3"], version = "^3.30.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
moto = {extras = ["sagemaker", "s3"], version = "^4.2.0"}

[tool.poetry.group.test.dependencies]
pytest-xdist = "^3.3.0"
pytest-asyncio = "^0.21.0"
faker = "^19.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.ipynb_checkpoints
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=src/ml_toolkit",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests that don't require AWS resources",
    "integration: Integration tests with AWS services (may incur costs)",
    "slow: Tests that take longer to run",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
